--- a/packages/app/src/pages/Home/index.module.scss
+++ b/packages/app/src/pages/Home/index.module.scss
@@ -54,6 +54,10 @@
         .comment {
           color: #777;
         }
+
+        .string {
+          color: #ff7e03;
+        }
       }
 
       .footnote {
