--- a/packages/app/src/_partials.module.scss
+++ b/packages/app/src/_partials.module.scss
@@ -3,3 +3,31 @@
     @content;
   }
 }
+
+@mixin wrapper {
+  width: calc(100vw - 2em);
+  max-width: 980px;
+  margin: 0px auto;
+}
+
+@mixin header {
+  margin: 4em 0px 2em;
+  padding: 1em 0px;
+  text-align: center;
+  position: sticky;
+  top: 0px;
+  background: #ffffff;
+
+  img {
+    width: 500px;
+    max-width: calc(100vw - 2em);
+    border-bottom: 4px solid #ff7e03;
+    padding-bottom: 0.5em;
+  }
+}
+
+@mixin footer {
+  color: #666;
+  text-align: center;
+  margin-bottom: 1em;
+}
