--- a/packages/app/src/pages/Docs/index.module.scss
+++ b/packages/app/src/pages/Docs/index.module.scss
@@ -3,10 +3,6 @@
 .wrapper {
   @include wrapper;
 
-  .header {
-    @include header;
-  }
-
   .navbar {
     position: sticky;
     top: 100px;
@@ -29,12 +25,18 @@
       padding: 0px;
       margin: 0px;
 
-      a {
-        text-decoration: none;
-        border-left: 3px solid #ff7e03;
-        display: block;
-        padding-left: 0.5em;
-        color: #000000;
+      li {
+        &.active {
+          font-weight: 600;
+        }
+
+        a {
+          text-decoration: none;
+          border-left: 3px solid #ff7e03;
+          display: block;
+          padding-left: 0.5em;
+          color: #000000;
+        }
       }
     }
   }
@@ -44,7 +46,9 @@
     margin: auto;
 
     h1 {
+      display: inline;
       scroll-margin-top: 100px;
+      border-bottom: 3px solid #ff7d03;
     }
 
     .sections {
@@ -111,34 +115,7 @@
             color: #777;
           }
         }
-
-        // .code {
-        //   margin: 0px -1em;
-        //   border: 3px solid #000000;
-        //   box-shadow: 0 5px 0 0 rgba(0, 0, 0, 0.5);
-        //   border-radius: 7px;
-        //   padding: 1em;
-        //   margin-bottom: 4em;
-
-        //   @include mobile {
-        //     margin: 0px 0px 4em;
-        //     min-width: calc(100vw - 2em);
-        //     overflow: auto;
-        //   }
-
-        //   .comment {
-        //     color: #777;
-        //   }
-
-        //   .string {
-        //     color: #ff7e03;
-        //   }
-        // }
       }
     }
-  }
-
-  .footer {
-    @include footer;
   }
 }
